Adicionado PDF com a formula do Hash.

--- a/doc/doc.tex
+++ b/doc/doc.tex
@@ -1,16 +1,21 @@
 %Recomendo o uso de Texmaker.
 
-\documentclass[12pt,a4paper]{abnt}
-\usepackage[brazil]{babel}
+\documentclass[12pt,a4paper]{article}
+%\usepackage[brazil]{babel}
 \usepackage[utf8]{inputenc}
-\usepackage{graphicx}
+\usepackage{amsmath}
+%usepackage{graphicx}
 
 
-\title{Project Enzo}
+%\title{Project Enzo}
 
 \begin{document}
 
-\tableofcontents
+
+$(\sum_{i=1}^{n}(c_{i} * 2^{i}))\mod10^{3}$
+
+
+%\tableofcontents
 
 %Tudo virá aqui.
 
